--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "3.5.1",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.5.1",
     "@capacitor/haptics": "1.1.4",
@@ -14,19 +15,28 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "assert": "^2.0.0",
+    "authy": "^1.4.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
     "ionicons": "^5.4.0",
+    "query-string": "^7.1.1",
+    "querystring-browser": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^4.0.3",
+    "stream": "^0.0.2",
+    "twilio": "^3.77.2",
     "typescript": "^4.1.3",
+    "url": "^0.11.0",
     "web-vitals": "^0.2.4",
+    "which-typed-array": "^1.1.8",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
@@ -39,6 +49,10 @@
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,7 +79,9 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.5.1"
+    "@capacitor/cli": "3.5.1",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.42"
   },
   "description": "An Ionic project"
 }
